[package]
name = "huggingface-cache-cleaner"
version = "1.0.0"
description = "Manage Hugging Face cache locally - view, search, and delete models with an intuitive UI"
authors = ["Hugging Face Cache Cleaner Team"]
license = "MIT"
repository = "https://github.com/yourusername/huggingface-cache-cleaner"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
